# Language-Construction-Code

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
conlang/: __init__.py  __main__.py  cli.py  language.py
conlang/gui/: __init__.py  app.py  drawops.py  viewmodel.py
conlang/lexicon/: __init__.py  concepts.py  generator.py  lexicon.py  numerals.py
conlang/morphology/: __init__.py  affix.py  features.py  generator.py  paradigm.py
conlang/phonology/: __init__.py  data.py  features.py  inventory.py  ipa_guide.py  phonotactics.py  wordgen.py
conlang/soundchange/: __init__.py  matcher.py  rule.py  ruleset.py
conlang/speech/: __init__.py  phones.py  respell.py  synth.py
conlang/syntax/: __init__.py  generator.py  linearizer.py  parameters.py  structure.py
conlang/teach/: __init__.py  cards.py  course.py  progress.py  runner.py  srs.py
conlang/tutorial/: __init__.py  builder.py  content.py  runner.py  session.py
conlang/writing/: __init__.py  featural.py  generator.py  glyph.py  system.py
tests/: test_gui.py  test_language.py  test_lexicon.py  test_morphology.py  test_numerals.py  test_phonology.py  test_soundchange.py  test_speech.py  test_syntax.py  test_teach.py  test_tutorial.py  test_writing.py
